--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
+  <h1>Test page</h1>
+  <h2>Yvonne Nillissen</h2>
   <p>Congratulations, you made it to the test page!</p>
 
   <p>Now, edit this file and styles.css to add an h1 tag at the top of the page that says "Test Page" and an h2 tag underneath that says your name</p>
